Fixed swap button and adding better button spacing

--- a/test_app/static/test_app/css/style.css
+++ b/test_app/static/test_app/css/style.css
@@ -465,6 +465,7 @@ button[disabled]{
     position: relative;
     overflow: visible;
     display:inline;
+    padding-right: 30px;
 }
 
 
